mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v11__test__snapshot_migrated_settings.snap
---
source: mullvad-daemon/src/migrations/v11.rs
expression: settings
---
{
  "allow_lan": false,
  "api_access_methods": {
    "custom": [],
    "direct": {
      "access_method": {
        "built_in": "direct"
      },
      "enabled": true,
      "id": "140123fa-a11c-4054-ba5d-591d8cbaa219",
      "name": "Direct"
    },
    "encrypted_dns_proxy": {
      "access_method": {
        "built_in": "encrypted_dns_proxy"
      },
      "enabled": true,
      "id": "ba10d242-3af8-4185-87cb-ab3b50c868a6",
      "name": "Encrypted DNS proxy"
    },
    "mullvad_bridges": {
      "access_method": {
        "built_in": "bridge"
      },
      "enabled": true,
      "id": "e3936387-494a-4277-b98a-688d94a862fd",
      "name": "Mullvad Bridges"
    }
  },
  "auto_connect": false,
  "bridge_settings": {
    "bridge_type": "normal",
    "custom": null,
    "normal": {
      "location": "any",
      "ownership": "any",
      "providers": "any"
    }
  },
  "bridge_state": "auto",
  "custom_lists": {
    "custom_lists": []
  },
  "lockdown_mode": false,
  "obfuscation_settings": {
    "selected_obfuscation": "auto",
    "shadowsocks": {
      "port": "any"
    },
    "udp2tcp": {
      "port": "any"
    }
  },
  "recents": [],
  "relay_overrides": [],
  "relay_settings": {
    "normal": {
      "location": {
        "only": {
          "location": {
            "country": "se"
          }
        }
      },
      "openvpn_constraints": {
        "port": "any"
      },
      "ownership": "any",
      "providers": "any",
      "tunnel_protocol": "wireguard",
      "wireguard_constraints": {
        "allowed_ips": "any",
        "entry_location": {
          "only": {
            "location": {
              "country": "se"
            }
          }
        },
        "ip_version": "any",
        "port": "any",
        "use_multihop": false
      }
    }
  },
  "settings_version": 12,
  "show_beta_releases": false,
  "tunnel_options": {
    "dns_options": {
      "custom_options": {
        "addresses": []
      },
      "default_options": {
        "block_ads": false,
        "block_adult_content": false,
        "block_gambling": false,
        "block_malware": false,
        "block_social_media": false,
        "block_trackers": false
      },
      "state": "default"
    },
    "generic": {
      "enable_ipv6": false
    },
    "openvpn": {
      "mssfix": null
    },
    "wireguard": {
      "daita": {
        "enabled": false,
        "use_multihop_if_necessary": true
      },
      "mtu": null,
      "quantum_resistant": "auto",
      "rotation_interval": null
    }
  },
  "update_default_location": false
}
